

Settings
--------

- History customization.  You can customize the number of items in
  pop-down value histories as well as the way they are sorted.  See
  the `popdownHistorySize' and `sortPopdownHistory' resources.

- Using `Status->Signals->All Signals', you can modify signal handling 
  for all signals at once.

- Signal settings are saved with the current session.

- DBX breakpoints are saved referring to the function name, if possible.
  This is useful when working with derived sources.


Bug fixes
---------

- This release brings major performance improvements, especially when
  processing large chunks of data.  In fact, the time complexity of
  data processing algorithms has been improved from O(n^2) to O(n).

- On DBX (except Sun DBX), the `Run' button is now bound to the
  `rerun' command, re-using program arguments.

- Value tips for large arrays no longer cause significant delays.

- Improved redirection handling.  You can redirect stderr away from
  the execution window, using `run 2> FILE'.  The debugger command
  `run 2> /dev/tty' will redirect stderr to the debugger console.

- Sun DBX warnings like `warning: -r option only recognized for C++'
  are properly suppressed.

- Significant memory leaks in the data window have been plugged.

- DDD handles unbuffered echoing TTY modes as set by some DBX flavours.

- Promptless input from the debugger console is handled correctly.

- The `Disp *' button dereferences pointers as it should.

- In a separate window setting, data buttons are properly placed.

- Several hard-coded limits have been raised, such as the length of
  GDB commands.

- The `Home' and `End' keys work in all text fields.




DDD 3.0
=======

DDD 3.0 brings a new, `clean' look, Java support, and JDB support.


User Interface
--------------

- New, `clean' look.  One single tool bar at the top provides all actions.

- Low screen space requirements.  In the default configuration, DDD
  requires less than 600x600 pixels.
